--- a/Adaalaat/Backend/config.json
+++ b/Adaalaat/Backend/config.json
@@ -4,7 +4,7 @@
         "dimension": 384
     },
     "llm": {
-        "model_name": "meta-llama/Llama-3.1-8B-Instruct:novita",
+        "model_name": "meta-llama/Llama-3.1-8B-Instruct",
         "max_new_tokens": 1024,
         "temperature": 0.3
     },
@@ -12,10 +12,5 @@
         "chunk_top_k": 8,
         "chunk_size": 512,
         "chunk_overlap": 50
-    },
-    "web_search": {
-        "provider": "serper",
-        "api_key_env": "SERPER_API_KEY",
-        "num_results": 5
     }
 }
